[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/services/WeaponService.gd" type="Script" id=1]
[ext_resource path="res://scenes/weapons/WeaponPool.tscn" type="PackedScene" id=2]

[node name="Weapons" type="YSort"]
script = ExtResource( 1 )

[node name="WeaponPool" parent="." instance=ExtResource( 2 )]

[node name="AutoEquipTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="BinglingTimer" type="Timer" parent="."]
wait_time = 11.0

[node name="BoomerangTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="ChainLightningTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="FrozenOrbTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="HydraTimer" type="Timer" parent="."]
wait_time = 11.0

[node name="ImpaleTimer" type="Timer" parent="."]
wait_time = 6.0

[node name="MeteorTimer" type="Timer" parent="."]
wait_time = 8.0

[node name="MissileTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="SawBladeTimer" type="Timer" parent="."]
wait_time = 7.0

[node name="ShortSwordTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="TeslaCoilTimer" type="Timer" parent="."]
wait_time = 10.0
